[gd_scene load_steps=29 format=2]

[ext_resource path="res://MemoryDump.tscn" type="PackedScene" id=1]
[ext_resource path="res://MemoryView.gd" type="Script" id=2]
[ext_resource path="res://MemoryTexture.tscn" type="PackedScene" id=3]
[ext_resource path="res://theme.theme" type="Theme" id=4]
[ext_resource path="res://assets/debug_step_out.png" type="Texture" id=5]
[ext_resource path="res://DebugPanel.gd" type="Script" id=6]
[ext_resource path="res://assets/debug_stop.png" type="Texture" id=7]
[ext_resource path="res://assets/debug_step_over.png" type="Texture" id=8]
[ext_resource path="res://assets/debug_step_into.png" type="Texture" id=9]
[ext_resource path="res://assets/debug_restart.png" type="Texture" id=10]
[ext_resource path="res://assets/debug_pause.png" type="Texture" id=11]
[ext_resource path="res://assets/fonts/Roboto_Mono/static/RobotoMono-Regular.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://CodePanel.gd" type="Script" id=13]
[ext_resource path="res://assets/fonts/Roboto_Mono/static/RobotoMono-Bold.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://call_stack_list_panel.gd" type="Script" id=15]

[sub_resource type="InputEventKey" id=5]
pressed = true
scancode = 16777248

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventKey" id=9]
scancode = 16777253

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="InputEventKey" id=7]
scancode = 16777254

[sub_resource type="ShortCut" id=8]
resource_local_to_scene = true
shortcut = SubResource( 7 )

[sub_resource type="InputEventKey" id=11]
shift = true
scancode = 16777254

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="InputEventKey" id=13]
shift = true
scancode = 16777248

[sub_resource type="ShortCut" id=14]
shortcut = SubResource( 13 )

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 12 )

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 14 )

[node name="PanelContainer" type="PanelContainer"]
margin_right = 800.0
margin_bottom = 300.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
script = ExtResource( 2 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 793.0
margin_bottom = 293.0
rect_min_size = Vector2( 600, 100 )

[node name="debug_panel" type="Panel" parent="HSplitContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 400.0
margin_bottom = 286.0
rect_min_size = Vector2( 400, 0 )
script = ExtResource( 6 )

[node name="stack_panel" type="Panel" parent="HSplitContainer/debug_panel"]
margin_left = 74.0
margin_top = 23.0
margin_right = 104.0
margin_bottom = 103.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="stack_label" type="Label" parent="HSplitContainer/debug_panel/stack_panel"]
margin_left = 3.0
margin_right = 63.0
margin_bottom = 45.0
rect_scale = Vector2( 0.4, 0.4 )
rect_clip_content = true
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Stack"

[node name="stack_text_panel" type="Label" parent="HSplitContainer/debug_panel/stack_panel"]
margin_left = 3.0
margin_top = 8.0
margin_right = 53.0
margin_bottom = 148.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
size_flags_vertical = 3

[node name="reg_panel" type="Panel" parent="HSplitContainer/debug_panel"]
margin_left = 32.0
margin_top = 23.0
margin_right = 72.0
margin_bottom = 103.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="reg_label" type="Label" parent="HSplitContainer/debug_panel/reg_panel"]
margin_left = 3.0
margin_right = 66.0
margin_bottom = 45.0
rect_scale = Vector2( 0.4, 0.4 )
rect_clip_content = true
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Regs"

[node name="reg_text_panel" type="Label" parent="HSplitContainer/debug_panel/reg_panel"]
margin_left = 3.0
margin_top = 8.0
margin_right = 73.0
margin_bottom = 130.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
size_flags_vertical = 3
text = "1
2
3
4
5
6"

[node name="flag_panel" type="Panel" parent="HSplitContainer/debug_panel"]
margin_top = 23.0
margin_right = 30.0
margin_bottom = 103.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="flag_label" type="Label" parent="HSplitContainer/debug_panel/flag_panel"]
margin_left = 3.0
margin_right = 66.0
margin_bottom = 45.0
rect_scale = Vector2( 0.4, 0.4 )
rect_clip_content = true
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Flags"

[node name="flag_text_panel" type="Label" parent="HSplitContainer/debug_panel/flag_panel"]
margin_left = 3.0
margin_top = 8.0
margin_right = 53.0
margin_bottom = 148.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
size_flags_vertical = 3

[node name="hw_panel" type="Panel" parent="HSplitContainer/debug_panel"]
anchor_right = 0.0075
margin_left = 106.0
margin_right = 192.0
margin_bottom = 103.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="hw_label" type="Label" parent="HSplitContainer/debug_panel/hw_panel"]
margin_left = 3.0
margin_right = 66.0
margin_bottom = 45.0
rect_scale = Vector2( 0.4, 0.4 )
rect_clip_content = true
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "HW info"

[node name="hw_text_panel" type="Label" parent="HSplitContainer/debug_panel/hw_panel"]
margin_left = 2.0
margin_top = 8.0
margin_right = 172.0
margin_bottom = 194.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
size_flags_vertical = 3

[node name="breakpoints_panel" type="Panel" parent="HSplitContainer/debug_panel"]
margin_left = 197.0
margin_right = 259.0
margin_bottom = 103.0

[node name="breakpoints_label" type="Label" parent="HSplitContainer/debug_panel/breakpoints_panel"]
margin_left = 3.0
margin_right = 71.0
margin_bottom = 25.0
rect_scale = Vector2( 0.4, 0.4 )
rect_clip_content = true
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Breakpoints"

[node name="breakpoints_list_panel" type="ItemList" parent="HSplitContainer/debug_panel/breakpoints_panel"]
margin_left = 1.0
margin_top = 8.0
margin_right = 121.0
margin_bottom = 194.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_vertical = 3
__meta__ = {
"_editor_description_": ""
}

[node name="watchpoints_panel" type="Panel" parent="HSplitContainer/debug_panel"]
margin_left = 261.0
margin_right = 400.0
margin_bottom = 103.0

[node name="watchpoints_label" type="Label" parent="HSplitContainer/debug_panel/watchpoints_panel"]
margin_left = 3.0
margin_right = 71.0
margin_bottom = 25.0
rect_scale = Vector2( 0.4, 0.4 )
rect_clip_content = true
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "watchpoints"

[node name="watchpoints_list_panel" type="ItemList" parent="HSplitContainer/debug_panel/watchpoints_panel"]
margin_left = 1.0
margin_top = 8.0
margin_right = 273.0
margin_bottom = 194.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_vertical = 3
__meta__ = {
"_editor_description_": ""
}

[node name="call_stack_panel" type="Panel" parent="HSplitContainer/debug_panel"]
margin_left = 248.0
margin_top = 104.0
margin_right = 400.0
margin_bottom = 279.0
size_flags_horizontal = 3

[node name="call_stack_label" type="Label" parent="HSplitContainer/debug_panel/call_stack_panel"]
margin_left = 3.0
margin_right = 71.0
margin_bottom = 25.0
rect_scale = Vector2( 0.4, 0.4 )
rect_clip_content = true
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Call Stack:"

[node name="call_stack_list_panel" type="TextEdit" parent="HSplitContainer/debug_panel/call_stack_panel"]
margin_left = 2.0
margin_top = 8.0
margin_right = 300.0
margin_bottom = 336.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/number_color = Color( 0.678431, 0.678431, 0.721569, 1 )
readonly = true
highlight_current_line = true
highlight_all_occurrences = true
script = ExtResource( 15 )
__meta__ = {
"_editor_description_": ""
}

[node name="command_panel" type="Panel" parent="HSplitContainer/debug_panel"]
margin_right = 104.0
margin_bottom = 21.0

[node name="break_cont" type="Button" parent="HSplitContainer/debug_panel/command_panel"]
margin_left = 1.0
margin_top = 2.0
margin_right = 35.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
hint_tooltip = "Break or continue the execution."
shortcut = SubResource( 6 )
icon = ExtResource( 11 )
flat = true
icon_align = 1
expand_icon = true

[node name="step_over" type="Button" parent="HSplitContainer/debug_panel/command_panel"]
margin_left = 18.0
margin_top = 2.0
margin_right = 52.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
hint_tooltip = "Execute the next command. If it is a call, step over it."
disabled = true
shortcut = SubResource( 10 )
icon = ExtResource( 8 )
flat = true
icon_align = 1
expand_icon = true

[node name="step_into" type="Button" parent="HSplitContainer/debug_panel/command_panel"]
margin_left = 35.0
margin_top = 2.0
margin_right = 69.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
hint_tooltip = "Execute the next command."
disabled = true
shortcut = SubResource( 8 )
icon = ExtResource( 9 )
flat = true
icon_align = 1
expand_icon = true

[node name="step_out" type="Button" parent="HSplitContainer/debug_panel/command_panel"]
margin_left = 52.0
margin_top = 2.0
margin_right = 86.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
hint_tooltip = "Execute until a return from a call."
disabled = true
shortcut = SubResource( 12 )
icon = ExtResource( 5 )
flat = true
icon_align = 1
expand_icon = true

[node name="restart" type="Button" parent="HSplitContainer/debug_panel/command_panel"]
margin_left = 69.0
margin_top = 2.0
margin_right = 103.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
hint_tooltip = "Restart the program."
shortcut = SubResource( 14 )
icon = ExtResource( 10 )
flat = true
icon_align = 1
expand_icon = true

[node name="stop" type="Button" parent="HSplitContainer/debug_panel/command_panel"]
margin_left = 86.0
margin_top = 2.0
margin_right = 120.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
hint_tooltip = "Stop the program and clean the memory including the ram-disk."
icon = ExtResource( 7 )
flat = true
icon_align = 1
expand_icon = true

[node name="code_panel" type="TextEdit" parent="HSplitContainer/debug_panel"]
margin_top = 131.0
margin_right = 246.0
margin_bottom = 279.0
rect_min_size = Vector2( 200, 100 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/breakpoint_color = Color( 0.784314, 0.133333, 0.133333, 1 )
custom_colors/number_color = Color( 0.678431, 0.678431, 0.721569, 1 )
custom_colors/current_line_color = Color( 0.356863, 0.356863, 0.356863, 1 )
custom_fonts/font = SubResource( 1 )
readonly = true
highlight_current_line = true
breakpoint_gutter = true
highlight_all_occurrences = true
script = ExtResource( 13 )

[node name="main_bar" type="Panel" parent="HSplitContainer/debug_panel"]
margin_top = 105.0
margin_right = 246.0
margin_bottom = 129.0

[node name="search_panel" type="LineEdit" parent="HSplitContainer/debug_panel/main_bar"]
margin_left = 2.0
margin_top = 2.0
margin_right = 232.0
margin_bottom = 42.0
rect_scale = Vector2( 0.5, 0.5 )
hint_tooltip = "Search panel. 
enter \"0x100\" to scroll to 0x100.
enter a label name if there is a debug.txt file with labels stored in the same folder. the format supported from retroassembler.
ctrl+up/down prev searches."
theme = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "0x100"
clear_button_enabled = true
caret_blink = true

[node name="watchpoint_popup" type="ConfirmationDialog" parent="HSplitContainer/debug_panel"]
margin_left = 100.0
margin_top = 100.0
margin_right = 343.0
margin_bottom = 266.0
rect_min_size = Vector2( 180, 100 )
window_title = "Watchpoint Settings"
__meta__ = {
"_editor_description_": ""
}

[node name="watchpoint_panel" type="Panel" parent="HSplitContainer/debug_panel/watchpoint_popup"]
margin_left = 8.0
margin_top = 8.0
margin_right = 235.0
margin_bottom = 119.0

[node name="wp_access_label" type="Label" parent="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel"]
margin_left = 7.0
margin_top = 6.0
margin_right = 77.0
margin_bottom = 27.0
rect_scale = Vector2( 0.7, 0.7 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Access"

[node name="wp_access_r" type="CheckBox" parent="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel"]
margin_left = 89.0
margin_top = 6.0
margin_right = 155.0
margin_bottom = 38.0
rect_scale = Vector2( 0.5, 0.5 )
pressed = true
text = "R"
flat = true

[node name="wp_access_w" type="CheckBox" parent="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel"]
margin_left = 131.0
margin_top = 6.0
margin_right = 193.0
margin_bottom = 38.0
rect_scale = Vector2( 0.5, 0.5 )
pressed = true
text = "W"
flat = true

[node name="wp_addr_label" type="Label" parent="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel"]
margin_left = 7.00001
margin_top = 28.0
margin_right = 77.0
margin_bottom = 49.0
rect_scale = Vector2( 0.7, 0.7 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Address"

[node name="wp_addr" type="LineEdit" parent="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel"]
margin_left = 89.0
margin_top = 28.0
margin_right = 357.0
margin_bottom = 59.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "0x100"

[node name="wp_cond_label" type="Label" parent="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel"]
margin_left = 7.00001
margin_top = 48.0
margin_right = 97.0
margin_bottom = 69.0
rect_scale = Vector2( 0.7, 0.7 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Cond/Value"

[node name="wp_cond" type="LineEdit" parent="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel"]
margin_left = 89.0
margin_top = 48.0
margin_right = 219.0
margin_bottom = 79.0
rect_scale = Vector2( 0.5, 0.5 )
hint_tooltip = "empty to catch any change.
= to break when it's equal to a value.
> to break when it's bigger than a value.
also works <, >=, <=, !=, ==
"
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="wp_value" type="LineEdit" parent="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel"]
margin_left = 158.0
margin_top = 48.0
margin_right = 288.0
margin_bottom = 79.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="wp_active_label" type="Label" parent="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel"]
margin_left = 7.00001
margin_top = 68.0
margin_right = 97.0
margin_bottom = 89.0
rect_scale = Vector2( 0.7, 0.7 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Active"

[node name="wp_active" type="CheckBox" parent="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel"]
margin_left = 89.0
margin_top = 68.0
margin_right = 173.0
margin_bottom = 100.0
rect_scale = Vector2( 0.5, 0.5 )
pressed = true
flat = true

[node name="wp_addr_space_label2" type="Label" parent="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel"]
margin_left = 7.0
margin_top = 88.0
margin_right = 107.0
margin_bottom = 109.0
rect_scale = Vector2( 0.7, 0.7 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "AddrSpace"

[node name="wp_addr_space_cpu" type="CheckBox" parent="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel"]
margin_left = 89.0
margin_top = 88.0
margin_right = 173.0
margin_bottom = 120.0
rect_scale = Vector2( 0.5, 0.5 )
pressed = true
text = "CPU"
flat = true

[node name="wp_addr_space_stack" type="CheckBox" parent="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel"]
margin_left = 131.0
margin_top = 88.0
margin_right = 225.0
margin_bottom = 120.0
rect_scale = Vector2( 0.5, 0.5 )
text = "STACK"
flat = true

[node name="wp_addr_space_global" type="CheckBox" parent="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel"]
margin_left = 177.0
margin_top = 88.0
margin_right = 271.0
margin_bottom = 120.0
rect_scale = Vector2( 0.5, 0.5 )
text = "GLOBAL"
flat = true

[node name="wp_value_size" type="CheckBox" parent="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel"]
margin_left = 155.0
margin_top = 63.0
margin_right = 249.0
margin_bottom = 95.0
rect_scale = Vector2( 0.5, 0.5 )
toggle_mode = false
text = "byte"
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_left = 412.0
margin_right = 786.0
margin_bottom = 286.0
__meta__ = {
"_editor_description_": ""
}

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/VBoxContainer"]
margin_right = 374.0
margin_bottom = 250.0
mouse_filter = 1
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_editor_description_": ""
}

[node name="Dump" parent="HSplitContainer/VBoxContainer/ScrollContainer" instance=ExtResource( 1 )]
margin_right = 368.0
margin_bottom = 204800.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="ScrollContainer2" type="ScrollContainer" parent="HSplitContainer/VBoxContainer"]
visible = false
margin_top = 79.0
margin_right = 377.0
margin_bottom = 143.0
mouse_filter = 1
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_editor_description_": ""
}

[node name="Bitmaps" parent="HSplitContainer/VBoxContainer/ScrollContainer2" instance=ExtResource( 3 )]
margin_right = 377.0
margin_bottom = 0.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="HintLabel" type="Label" parent="HSplitContainer/VBoxContainer"]
margin_top = 265.0
margin_right = 374.0
margin_bottom = 286.0
size_flags_vertical = 8
text = "Helpful hints"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="visibility_changed" from="." to="." method="_on_PanelContainer_visibility_changed"]
[connection signal="focus_exited" from="HSplitContainer/debug_panel" to="HSplitContainer/debug_panel" method="_on_debug_panel_focus_exited"]
[connection signal="item_rect_changed" from="HSplitContainer/debug_panel" to="HSplitContainer/debug_panel" method="_on_debug_panel_item_rect_changed"]
[connection signal="resized" from="HSplitContainer/debug_panel" to="HSplitContainer/debug_panel" method="_on_debug_panel_resized"]
[connection signal="item_activated" from="HSplitContainer/debug_panel/breakpoints_panel/breakpoints_list_panel" to="HSplitContainer/debug_panel" method="_on_breakpoints_list_panel_item_selected"]
[connection signal="item_selected" from="HSplitContainer/debug_panel/breakpoints_panel/breakpoints_list_panel" to="HSplitContainer/debug_panel" method="_on_breakpoints_list_panel_item_selected"]
[connection signal="nothing_selected" from="HSplitContainer/debug_panel/watchpoints_panel/watchpoints_list_panel" to="HSplitContainer/debug_panel" method="_on_watchpoints_list_panel_nothing_selected"]
[connection signal="ready" from="HSplitContainer/debug_panel/call_stack_panel/call_stack_list_panel" to="HSplitContainer/debug_panel/call_stack_panel/call_stack_list_panel" method="_on_call_stack_list_panel_ready"]
[connection signal="pressed" from="HSplitContainer/debug_panel/command_panel/break_cont" to="HSplitContainer/debug_panel" method="_on_break_cont_pressed"]
[connection signal="pressed" from="HSplitContainer/debug_panel/command_panel/step_over" to="HSplitContainer/debug_panel" method="_on_step_over_pressed"]
[connection signal="pressed" from="HSplitContainer/debug_panel/command_panel/step_into" to="HSplitContainer/debug_panel" method="_on_step_into_pressed"]
[connection signal="pressed" from="HSplitContainer/debug_panel/command_panel/restart" to="HSplitContainer/debug_panel" method="_on_restart_pressed"]
[connection signal="breakpoint_toggled" from="HSplitContainer/debug_panel/code_panel" to="HSplitContainer/debug_panel" method="_on_code_panel_breakpoint_toggled"]
[connection signal="gui_input" from="HSplitContainer/debug_panel/code_panel" to="HSplitContainer/debug_panel" method="_on_code_panel_gui_input"]
[connection signal="gui_input" from="HSplitContainer/debug_panel/main_bar/search_panel" to="HSplitContainer/debug_panel" method="_on_search_panel_gui_input"]
[connection signal="text_entered" from="HSplitContainer/debug_panel/main_bar/search_panel" to="HSplitContainer/debug_panel" method="_on_search_panel_text_entered"]
[connection signal="confirmed" from="HSplitContainer/debug_panel/watchpoint_popup" to="HSplitContainer/debug_panel" method="_on_watchpoint_popup_confirmed"]
[connection signal="pressed" from="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel/wp_access_r" to="HSplitContainer/debug_panel" method="_on_wp_access_nor_r_not_w_pressed"]
[connection signal="pressed" from="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel/wp_access_w" to="HSplitContainer/debug_panel" method="_on_wp_access_nor_r_not_w_pressed"]
[connection signal="pressed" from="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel/wp_addr_space_cpu" to="HSplitContainer/debug_panel" method="_on_wp_addr_space_cpu_pressed"]
[connection signal="pressed" from="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel/wp_addr_space_stack" to="HSplitContainer/debug_panel" method="_on_wp_addr_space_stack_pressed"]
[connection signal="pressed" from="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel/wp_addr_space_global" to="HSplitContainer/debug_panel" method="_on_wp_addr_space_global_pressed"]
[connection signal="pressed" from="HSplitContainer/debug_panel/watchpoint_popup/watchpoint_panel/wp_value_size" to="HSplitContainer/debug_panel" method="_on_wp_value_size_pressed"]
[connection signal="gui_input" from="HSplitContainer/VBoxContainer" to="." method="_on_gui_input"]
[connection signal="gui_input" from="HSplitContainer/VBoxContainer/ScrollContainer/Dump" to="HSplitContainer/VBoxContainer/ScrollContainer/Dump" method="_on_gui_input"]
